# pydex

./: README.md  pydex_full_capability_test.py  pyproject.toml  run_tests.py  setup.py
examples/ASL Elimination/: asl_elimination_demo.py  pydex_ift_asl_guide.docx
examples/ipopt/: first_order_reaction_ipopt.py  v_optimal_test_case.py
examples/jupyter/: pydex_ode_model.ipynb  pydex_quickstart.ipynb
examples/ode/: case_1.py  case_1_model.py  case_1_no_ift.py  case_1_no_ift_model.py  case_1_no_ift_no_collocation.py  case_1_no_ift_no_collocation_model.py  case_2.py  case_2_model.py  case_2_no_ift.py  case_2_no_ift_model.py  case_2_no_ift_no_collocation.py  case_2_no_ift_no_collocation_model.py  case_3.py  case_3_ift.py  case_3_ift_model.py  case_3_model.py
pydex/core/: designer.py
pydex/utils/: diagnose_asl_elimination.py
testing_scripts/: first_order_reaction.py  first_order_reaction_pyomo.py  pydex_full_capability_test.py  v_optimal_test_case.py  v_optimal_test_case_pyomo.py
